Добавил кастомный fab

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="priority_hint">Priority</string>
     <string name="add">ADD</string>
     <string name="save">SAVE</string>
+    <string name="fab_info_stroke">Here you can find some information about the picture</string>
 </resources>
